Update azure-pipelines.yml for Azure Pipelines
Include Windows ReleaseID

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,7 @@ pool:
   vmImage: 'windows-2019'
 
 steps:
+- powershell: Write-Host (Get-ItemProperty -Path ‘HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion’).ReleaseId
+  displayName: 'Show Windows ReleaseId'
 - script: docker info
-  displayName: 'Display docker information'
+  displayName: 'Show Docker information'
