Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ pool:
   vmImage: 'windows-2019'
 
 steps:
-- powershell: Write-Host (Get-ItemProperty -Path ‘HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion’).ReleaseId
-  displayName: 'Show Windows ReleaseId'
-- script: docker info
-  displayName: 'Show Docker information'
+- powershell: |
+    $currentVersion = Get-ItemProperty "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion"
+    Write-Host "Server version $($currentVersion.BuildLabEx)"
+    Write-Host "Server releaseId $($currentVersion.ReleaseId)"
+    & docker info
