--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,22 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  branches:
+    include:
+    - '*'
+  paths:
+    exclude:
+    - LICENSE
+    - README.md
+
+pr:
+  branches:
+    include:
+    - master
+  paths:
+    exclude:
+    - LICENSE
+    - README.md
 
 pool:
   vmImage: 'windows-2019'
